# PhaseIV-API

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/phaseIV/: __init__.py  config.py
src/phaseIV/api/: main.py  routes.py
src/phaseIV/scrapper/: client.py  parser.py  wrapper_functions.py
tests/: conftest.py  test_client.py
