[project]
name = "PhaseIV-API"
version = "0.1.0"
description = "Python async API client for scraping a local film lending library website."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
