[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phaseIV"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/phaseIV/_version.py"

[project]
name = "PhaseIV-API"
dynamic = ["version"]
description = "Python async API client and REST server for the Phase IV film lending library."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "diskcache>=5.6.3",
    "fastapi[standard]==0.135.1",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
